data/derived/comb/progs/unify/prog6902.ml.out
Characters 44-48:
  in wwhile ((fx),b);;
             ^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
